...
    const val quickFixCheckedListElementRight = "quickFixCheckedListElementRight"
    const val quickFixCheckedListElementLeft = "quickFixCheckedListElementLeft"
    const val quickFixCheckedListElementDivider = "quickFixCheckedListElementDivider"
    const val quickFixCheckedListTextFieldElement = "quickFixCheckedListTextFieldElement"
    const val quickFixCheckedListTextFieldElementDelete =
        "quickFixCheckedListTextFieldElementDelete"
    const val quickFixCheckedListTextFieldElementAdd = "quickFixCheckedListTextFieldElementAdd"
    const val quickFixCheckedListOk = "quickFixCheckedListOk"
    const val quickFixCheckedListReset = "quickFixCheckedListReset"
    const val quickFixCheckedListEdit = "quickFixCheckedListEdit"

    // quickfix
    const val quickFixUploadPictures = "quickFixUploadPictures"

    // WelcomeOnBoardScreen
    const val welcomeOnBoardScreenStayUserButton = "welcomeOnBoardScreenStayUserButton"
...
